--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <div class="grid-item">
         <h2>order list</h2>
-        <table class="order-list">
+        <table id="order-list">
             <thead>
             <tr>
                 <th>ID</th>
@@ -73,7 +73,7 @@
 </div>
 <h2>Microphone Transcription</h2>
     <div id="transcription"></div>
-    <div class="log"></div>
+    <div id="log"></div>
 
 
     <script>
