--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <h1>boozer speech</h1>
 <div class="grid-container">
     <div class="grid-item">
-        <canvas id="waveformCanvas" width="500" height="200"></canvas>
+        <canvas id="canvas" width="500" height="200"></canvas>
     </div>
     <div class="grid-item">
         <h2>order list</h2>
         <table id="order-list">
             <thead>
             <tr>
-                <th>ID</th>
-                <th>Name</th>
+                <th>ID (default)</th>
+                <th>Name (default)</th>
             </tr>
             </thead>
             <tbody>
@@ -28,46 +28,6 @@
                 <td>7405</td>
                 <td>Cosmopolitan</td>
             </tr>
-            <tr>
-                <td>1197</td>
-                <td>Bloody Mary</td>
-            </tr>
-            <tr>
-                <td>7588</td>
-                <td>Manhattan</td>
-            </tr>
-            <tr>
-                <td>8808</td>
-                <td>Negroni</td>
-            </tr>
-            <tr>
-                <td>9089</td>
-                <td>Old Fashioned</td>
-            </tr>
-            <tr>
-                <td>3669</td>
-                <td>Sex on the Beach</td>
-            </tr>
-            <tr>
-                <td>6054</td>
-                <td>Martini</td>
-            </tr>
-            <tr>
-                <td>5613</td>
-                <td>Mai Tai</td>
-            </tr>
-            <tr>
-                <td>1915</td>
-                <td>White Russian</td>
-            </tr>
-            <tr>
-                <td>4391</td>
-                <td>Whiskey Sour</td>
-            </tr>
-            <tr>
-                <td>2712</td>
-                <td>Mojito</td>
-            </tr>
             </tbody>
         </table>    </div>
 </div>
@@ -75,46 +35,74 @@
     <div id="transcription"></div>
     <div id="log"></div>
 
-
     <script>
-        // Get the canvas element
-        const canvas = document.getElementById('waveformCanvas');
-        const ctx = canvas.getContext('2d');
+        let audioContext;
+        let mediaStreamSource;
+        let analyser;
+        let canvas, canvasCtx;
+        let animationId;
 
-        // Waveform data
-        const waveform = [0.2, 0.5, 0.8, 0.3, 0.6, 0.4, 0.1, 0.9, 0.7, 0.2];
+        function startRecording() {
+            navigator.mediaDevices.getUserMedia({ audio: true })
+                .then(function(stream) {
+                    audioContext = new AudioContext();
+                    mediaStreamSource = audioContext.createMediaStreamSource(stream);
+                    analyser = audioContext.createAnalyser();
 
-        // Clear the canvas
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
+                    mediaStreamSource.connect(analyser);
+                    analyser.connect(audioContext.destination);
 
-        // Smooth the waveform using interpolation
-        const interpolatedWaveform = [];
-        for (let i = 0; i < waveform.length - 1; i++) {
-            const currentValue = waveform[i];
-            const nextValue = waveform[i + 1];
-            const interpolatedValues = [currentValue];
-            for (let j = 0; j < 10; j++) {
-                const t = (j + 1) / 10;
-                const interpolatedValue = currentValue + (nextValue - currentValue) * t;
-                interpolatedValues.push(interpolatedValue);
+                    canvas = document.getElementById('canvas');
+                    canvasCtx = canvas.getContext('2d');
+
+                    animationId = requestAnimationFrame(draw);
+                })
+                .catch(function(err) {
+                    console.error('Error accessing microphone:', err);
+                });
+        }
+
+        function stopRecording() {
+            cancelAnimationFrame(animationId);
+            mediaStreamSource.disconnect();
+            analyser.disconnect();
+            audioContext.close();
+        }
+
+        function draw() {
+            const bufferLength = analyser.fftSize;
+            const dataArray = new Uint8Array(bufferLength);
+            analyser.getByteTimeDomainData(dataArray);
+
+            canvasCtx.clearRect(0, 0, canvas.width, canvas.height);
+            canvasCtx.lineWidth = 2;
+            canvasCtx.strokeStyle = 'rgb(0, 0, 0)';
+            canvasCtx.beginPath();
+
+            const sliceWidth = canvas.width * 1.0 / bufferLength;
+            let x = 0;
+
+            for(let i = 0; i < bufferLength; i++) {
+                const v = dataArray[i] / 128.0;
+                const y = v * canvas.height / 2;
+
+                if(i === 0) {
+                    canvasCtx.moveTo(x, y);
+                } else {
+                    canvasCtx.lineTo(x, y);
+                }
+
+                x += sliceWidth;
             }
-            interpolatedWaveform.push(...interpolatedValues);
+
+            canvasCtx.lineTo(canvas.width, canvas.height / 2);
+            canvasCtx.stroke();
+
+            animationId = requestAnimationFrame(draw);
         }
-
-        // Draw the waveform
-        ctx.beginPath();
-        ctx.moveTo(0, canvas.height / 2);
-
-        for (let i = 0; i < interpolatedWaveform.length; i++) {
-            const x = (i / (interpolatedWaveform.length - 1)) * canvas.width;
-            const y = (1 - interpolatedWaveform[i]) * canvas.height;
-            ctx.lineTo(x, y);
-        }
-
-        ctx.lineTo(canvas.width, canvas.height / 2);
-        ctx.strokeStyle = 'blue';
-        ctx.stroke();
+        startRecording();
     </script>
+
 
     <script src="script.js"></script>
 </body>
